# plimsoll

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  PRD.md  README.md  docker-compose.yml  pyproject.toml  stop.sh
.agent/rules/: API.md  project-rules.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.docker.txt  requirements.txt  start_server.py
backend/api/routes/: deps.py
backend/data/eval/: compliance_top1.jsonl
backend/modules/analytics/: analytics.py  ocr_service.py  visual_risk_routes.py  visual_risk_service.py
backend/modules/demo/: autoplay_controller.py  cot_data.py  crisis_455pm_data.py  demo_routes.py
backend/modules/financial/: hedge_agent.py  hedge_routes.py  hedging_strategies.py  market_data_service.py  market_returns.py  market_sentinel_routes.py
backend/modules/maritime/: compliance_report_generator.py  compliance_service.py  crew_maritime_compliance.py  document_classifier.py  document_service.py  maritime_knowledge_base.py  maritime_routes.py  maritime_tools.py
backend/modules/orchestration/: crew_document_agents.py  crew_missing_docs_workflow.py  crew_orchestrator.py  crew_stock_research.py  document_tools.py  reasoning_schemas.py
backend/scripts/: api_smoke_test.py  audit_unauthed_routes.py  eval_compliance.py  ingest_maritime_data.py  load_knowledge_base.py  load_maritime_regulations.py  load_port_data.py  load_un_locode.py  reset_collections.py  seed_port_data.py  test_compliance_check.py  test_knowledge_base_queries.py
backend/shared/: config.py  rate_limit.py  schemas.py  uploads.py
backend/shared/auth/: __init__.py  clerk_auth.py  supabase_auth.py
backend/shared/database/: database.py
backend/shared/database/models/: __init__.py  compliance_report.py
backend/shared/embeddings/: __init__.py  local.py
backend/shared/llm/: __init__.py  factory.py
backend/shared/observability/: __init__.py  citations.py  llm_ledger.py  mode.py  pii_filter.py  security_headers.py
backend/tests/: test_demo.py  test_uploads.py
backend/worker/: __init__.py  main.py
docker/postgres/init/: 001_extensions.sql
docs/: GEMINI_VISION.md  RUNNING.md
docs/contracts/: auth.md  db.md  realtime.md  storage.md
docs/decisions/: 0001-job-queue.md  0002-local-stack.md
frontend/: README.md  next.config.ts  package.json
frontend/app/: ClientApp.tsx  ClientOnlyApp.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/admin/: page.tsx
frontend/app/(app)/demo/: page.tsx
frontend/app/(app)/documents/: page.tsx
frontend/app/(app)/port/: page.tsx
frontend/app/(app)/usershome/: page.tsx
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(public)/: page.tsx
frontend/app/[...path]/: page.tsx
frontend/components/: AIAgentCard.tsx  AgentCoTPanel.tsx  AgentWorkflow.tsx  AzureBadges.tsx  AzureIntegration.tsx  Brand.tsx  CommonHeader.tsx  CompliancePanel.tsx  CrisisTimeline.tsx  DEPRECATED_LiveDataStream.tsx  DebateView.tsx  DemoStartScreen.tsx  ExecutionView.tsx  GlobalMap2D.tsx  GlobalMap2DDeck.tsx  GlobalMap3D.tsx  Globe3D.tsx  ModeBanner.tsx  RAGSourceCard.tsx  ReasoningStep.tsx  RouteLegend.tsx  RouteSelector.tsx  ShipDetailsCard.tsx  VisualRiskPanel.tsx
frontend/components/Admin/: ConversationDetail.tsx  CustomerList.tsx  DashboardCharts.tsx  HandoffDetail.module.css  HandoffDetail.tsx  HandoffQueue.tsx  HandoffStats.tsx
frontend/components/ChatWidget/: ChatWidget.module.css  ChatWidget.tsx
frontend/components/documents/: AnalysisProgress.tsx  DocumentUploadZone.tsx  GapAnalysisReport.tsx  index.ts
frontend/components/landing/: BentoGrid.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/context/: HeaderContext.tsx  SupabaseAuthContext.tsx
frontend/data/: ports.ts  seaRegions.ts
frontend/public/data/: countries.geojson
frontend/services/: api.ts  apiClient.ts  documentApi.ts  hedgeApi.ts  maritimeRouteAPI.ts  marketSentinel.ts  messageService.ts  reasoningService.ts  supabaseClient.ts  visualRiskApi.ts  websocket.ts
frontend/src/: App.css
frontend/src/components/: AzureBadges.tsx  CommonHeader.tsx  CrisisTimeline.tsx  DebateView.tsx  DemoStartScreen.tsx  GlobalMap2DDeck.tsx  RAGSourceCard.tsx  ReasoningStep.tsx
frontend/src/components/Admin/: ConversationDetail.jsx  CustomerList.jsx  HandoffDetail.jsx  HandoffQueue.jsx  HandoffStats.jsx
frontend/src/components/ChatWidget/: ChatWidget.jsx
frontend/src/context/: HeaderContext.tsx
frontend/src/data/: ports.ts
frontend/src/pages/: DemoPage.tsx  PaymentPage.tsx  UsersHome.jsx
frontend/src/pages/admin/: AdminDashboard.tsx
frontend/src/services/: api.js  maritimeRouteAPI.ts  messageService.js  websocket.ts
frontend/src/utils/: timeUtils.ts
frontend/styles/: map.css  payment.css  reasoning.css  theme.css
frontend/utils/: pathDensifier.ts  routeCalculator.ts  routeData.ts  shipData.ts  timeUtils.ts
frontend/views/: AdminPage.tsx  DemoPage.tsx  DocumentUploadPage.tsx  PaymentPage.tsx  PortSelectionPage.tsx  SignInPage.tsx  UsersHome.tsx
frontend/views/admin/: AdminDashboard.tsx
supabase/: README.md  config.toml
supabase/migrations/: 0001_extensions.sql
