[project]
name = "plimsoll-backend"
version = "0.1.0"
description = "Plimsoll Maritime Risk Intelligence backend (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.3",
    "starlette==0.41.3",
    "sse-starlette==3.0.3",
    "python-multipart==0.0.21",
    "anyio>=3.7.1,<5",
    "numpy>=1.26.0",
    "pydantic==2.11.10",
    "pydantic-settings==2.10.1",
    "SQLAlchemy==2.0.23",
    "psycopg2-binary==2.9.11",
    "psycopg[binary,pool]==3.2.3",
    "pgvector>=0.4.0",
    "alembic==1.13.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.1.1",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "websockets==16.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "uvloop==0.22.1; platform_system != 'Windows'",
    "fastembed>=0.4.2",
]

[project.optional-dependencies]
# CrewAI / Gemini / OpenAI are runtime-optional. Slim Docker images can skip
# this group; production analyst nodes install with `uv sync --extra ai`.
ai = [
    "crewai>=0.86,<1.0",
    "crewai-tools>=0.20",
    "openai>=1.83.0",
    "google-generativeai>=0.8.0",
]
# Only the data ingestion scripts use langchain (Document + PyPDFLoader). Keep
# it out of the production image until the scripts are rewritten.
scripts = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
    "mypy>=1.10",
    "bandit>=1.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data",
    "frontend",
    "supabase",
    "**/__pycache__",
    "**/migrations",
    "backend/data",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "C4",   # comprehensions
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults is the supported pattern
    "RUF012", # mutable class defaults: SQLAlchemy attrs trigger this
    "RUF001", # regulation/source text intentionally contains non-ASCII symbols
    "RUF003", # comments may preserve copied source snippets
    "TC002", # runtime imports are clearer in this FastAPI codebase
    "TC003", # runtime imports are clearer in this FastAPI codebase
]

[tool.ruff.lint.per-file-ignores]
"backend/main.py" = ["E402"] # load .env before routers that read settings at import time
"backend/scripts/*" = ["E402", "T201"]
"backend/tests/*" = ["E402", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "modules"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "backend/data",
    "backend/scripts/data",
    "frontend",
    "supabase",
]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "google.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

[tool.bandit]
exclude_dirs = ["backend/tests", "backend/scripts/data"]
skips = ["B101"]  # assert in tests is fine
